<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.navigation.AddEditNoteActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <DatePicker
            android:hint="@string/add_date"
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>
        <EditText
            android:hint="@string/add_title"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:inputType="text"
            android:importantForAutofill="no"/>
        <EditText
            android:hint="@string/add_body"
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/addNoteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/editButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:id="@+id/saveNoteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_note"
                android:layout_margin="@dimen/activity_vertical_margin"/>
            <Button
                android:id="@+id/deleteNoteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_note"
                android:layout_margin="@dimen/activity_vertical_margin"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>